--- a/src/HomeStack.UI/_Imports.razor
+++ b/src/HomeStack.UI/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using HomeStack.UI
 @using HomeStack.UI.Layout
+@using HomeStack.Core.Models
+@using HomeStack.Scanner
+@using HomeStack.Configurator
